--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DISCORDJS_BOT_TOKEN=NzUyMDA3MDgwMjY4OTIyOTEw.X1RXKw.ZlU2foNjMBCnLQnxCmh3tDZwnPo
-WEBHOOK_ID=752112088234590278
-WEBHOOK_TOKEN=B53EI5bQ9xJBGnI5PIu6OgYSIfKW7d70oN4QQwTqpn_mkSCjs-JIRJBRv2BS05KOMJCP
+DISCORDJS_BOT_TOKEN=//enter the token
+WEBHOOK_ID=//enter the id
+WEBHOOK_TOKEN=//enter the token
 
 
